<resources>
    <string name="app_name">reCentr</string>
    <string name="action_settings">Settings</string>
    <string name="settings">Settings</string>
    <string name="on">On</string>
    <string name="discoverable">Discoverable</string>
    <string name="off">off</string>
    <string name="list">List</string>
    <string name="physical_therapy">Physical Therapy</string>
    <string name="stats">Stats</string>
    <string name="profile">Profile</string>
    <string name="share">Share</string>
    <string name="home">Home</string>
    <string name="connected">Connected</string>
    <string name="disconnected">Disconnected</string>
    <string name="BTNotSupported">Bluetooth not supported</string>
    <string name="ble_not_supported">BLE not supported</string>
    <string name="error_bluetooth_not_supported">Bluetooth not supported.</string>
    <string name="title_activity_uart">UART</string>
    <string name="connect_bluetooth_device">Connect Bluetooth Device</string>
    <string name="bluetooth_not_supported">Error: Bluetooth not supported</string>
    <string name="title_activity_device_connected">DeviceConnectedActivity</string>
    <string name="unknown_characteristic">Unknown characteristic</string>
    <string name="unknown_service">Unknown service</string>
    <string name="unknown_device">Unknown device</string>
    <string name="label_data">Data:</string>
    <string name="label_device_address">Device address:</string>
    <string name="label_state">State:</string>
    <string name="no_data">No data</string>


    <!-- Menu items -->
    <string name="menu_connect">Connect</string>
    <string name="menu_disconnect">Disconnect</string>
    <string name="menu_scan">Scan</string>
    <string name="menu_stop">Stop</string>


    <string name="enter_exercise">Enter Exercise</string>
    <string name="submit">Submit</string>
    <string name="name">Name</string>
    <string name="rehabilitation_exercises">Rehabilitation Exercises</string>
    <string name="track">Track</string>
    <string name="trends">Trends</string>
    <string name="title_activity_hamburger">HamburgerActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="sign_out">Sign Out</string>
    <string name="about_us">About us</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="logo">logo</string>
    <string name="info_about_us">Here at reCentr we stive to help people from all walks of life to enjoy the many health
        benefits that come with good posture. With our signature device, you to can begin improving your posture today.
    </string>
    <string name="close">Close</string>
    <string name="emergency_contact">Emergency Contact</string>
    <string name="password">Password</string>
    <string name="info">Info</string>

</resources>
