<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
        android:layout_height="match_parent"
        xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
            android:id="@+id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/about_us"
            android:padding="16dp"
            android:textSize="24sp"
            android:background="@color/light_gray"
            android:textColor="@color/colorBlack"
            tools:ignore="MissingConstraints"/>

    <TextView
            android:id="@+id/body"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/title"
            android:padding="30dp"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:text="@string/info_about_us"
    />

    <Button
            android:id="@+id/close"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/close"
            app:layout_constraintTop_toBottomOf="@id/body"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:layout_marginBottom="12dp"
    />

</android.support.constraint.ConstraintLayout>