<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:id="@+id/fragment_home"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/colorWhite"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/activity_vertical_margin"
                tools:context=".fragments.HomeFragment"
                tools:ignore="ExtraText">

    <LinearLayout
            android:id="@+id/top_half"
            android:layout_width="match_parent"
            android:layout_height="280dp"
            android:orientation="vertical"/>

    <FrameLayout
            android:id="@+id/frag_placeholder"
            android:layout_width="match_parent"
            android:layout_height="280dp"/>

    <TextView
            android:id="@+id/tv_data"
            android:textColor="@color/colorBlack"
            android:textSize="100sp"
            android:gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>


    <LinearLayout
            android:id="@+id/bottom_half"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:layout_below="@+id/top_half"
            android:orientation="vertical">

        <Button
                android:id="@+id/b_bluetooth"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="25dp"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/colorLightGray"
                android:text="@string/connect_bluetooth_device"
                android:textColor="@color/colorWhite"/>


    </LinearLayout>

    <LinearLayout
            android:id="@+id/bottom_half2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/bottom_half"
            android:orientation="horizontal">

        <Button
                android:id="@+id/b_stats"
                android:layout_width="@dimen/buttonSize"
                android:layout_height="@dimen/buttonSize"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/trustUsWithYourDataBlue"
                android:drawableTop="@drawable/ic_bar_chart"
                android:text="@string/stats"
                android:textColor="@color/colorWhite"
                android:textSize="15sp"/>

        <Button
                android:id="@+id/b_pt"
                style="@style/Widget.AppCompat.Button.Colored"
                android:layout_width="@dimen/buttonSize"
                android:layout_height="@dimen/buttonSize"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_weight="1"
                android:background="@drawable/rounded_button"
                android:backgroundTint="@color/trustUsWithYourDataBlue"
                android:drawableTop="@drawable/ic_physical_therapy"
                android:text="@string/physical_therapy"
                android:textColor="@color/colorWhite"
                android:textSize="15dp"/>


    </LinearLayout>

</RelativeLayout>

