<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent" xmlns:app="http://schemas.android.com/apk/res-auto"
        android:background="@drawable/login_background"
        tools:context=".activities.MainActivity">

    <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_centerVertical="true"
            tools:ignore="UselessParent">

        <ImageView android:layout_width="100dp"
                   android:layout_height="100dp"
                   android:src="@drawable/prelim_icon"
                   android:layout_gravity="center_horizontal"
                   android:contentDescription="@string/logo"/>


        <TextView android:layout_width="wrap_content"
                  android:layout_height="match_parent"
                  android:text="@string/app_name"
                  android:textColor="@color/colorWhite"
                  android:layout_gravity="center"
                  android:textSize="25sp"
        />


        <EditText
                android:id="@+id/et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:layout_marginStart="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/login_edit_background"
                android:drawableStart="@drawable/usericon"
                android:hint="Email"
                android:drawableLeft="@drawable/usericon"
        />

        <android.support.design.widget.TextInputLayout
                app:layout_constraintTop_toBottomOf="@+id/et_email"
                android:id="@+id/password_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:passwordToggleEnabled="true">

            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:padding="10dp"
                    android:layout_marginStart="20dp"
                    android:layout_marginEnd="20dp"
                    android:layout_marginTop="20dp"
                    android:background="@drawable/login_edit_background"
                    android:drawableStart="@drawable/iconpassword"
                    android:inputType="textPassword"
                    android:hint="@string/password"
                    app:passwordToggleEnabled="true"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    tools:ignore="Autofill,TextFields"/>

        </android.support.design.widget.TextInputLayout>


        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/b_signin_background"
                android:text="Sign In"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:padding="2dp"
                android:id="@+id/b_signin"/>

        <Button android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="Sign Up"
                android:textAllCaps="false"
                android:textColor="@color/colorWhite"
                android:textSize="16sp"
                android:background="@drawable/b_signup_background"
                android:padding="2dp"
                android:id="@+id/b_signup"
        />


    </LinearLayout>


</RelativeLayout>